<resources>
    <string name="app_name">Yet Another 5e Character Sheet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="character_list">Characters</string>
    <string name="campaign_list">Campaigns</string>
    <string name="campaign_search">Search Campaigns</string>

    <string name="title_activity_character_list">Character List</string>

    <!-- Login and Register Screen text -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <!-- Account and Sync Adapter Authority -->
    <string name="authority">com.ptpthingers.synchronization</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_character_sheet">CharacterSheetActivity</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse faucibus, massa et luctus luctus, nibh velit dictum ligula, vitae suscipit justo neque vitae lectus. Pellentesque sed metus eget nunc semper bibendum in vitae augue. Ut vel nisl ut eros molestie faucibus. Sed id ullamcorper tellus. Fusce quis efficitur odio, a varius est. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam at nisi pellentesque nunc lobortis sollicitudin. In eget orci a ligula bibendum venenatis. Vivamus sed imperdiet ante. Aenean tempus risus nec sollicitudin ultrices. </string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Menu items-->
    <string name="action_settings">Settings</string>
    <string name="action_synchronize_now">Synchronize now</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
