<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_char_list"
            android:icon="@drawable/ic_people"
            android:title="@string/character_list" />
        <item
            android:id="@+id/nav_camp_list"
            android:icon="@drawable/ic_collections_bookmark"
            android:title="@string/campaign_list" />
        <item
            android:id="@+id/nav_search_camps"
            android:icon="@drawable/ic_search"
            android:title="@string/campaign_search" />
    </group>
    <item
        android:id="@+id/nav_manage"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/nav_rpc_test"
        android:icon="@drawable/ic_menu_share"
        android:title="gRPC Test" />
</menu>
